--- a/public/style.css
+++ b/public/style.css
@@ -53,7 +53,7 @@ body {
     text-align: center;
 }
 
-.tune-item a {
+.tune-item > a {
     order: 4;
     margin: auto;
     flex-grow: auto;
@@ -70,35 +70,40 @@ body {
     line-height: 30px;
 }
 
+/* TODO flex box it */
+#upload-area {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    display: inline-block;
+    padding: 0;
+}
 
+#upload-area > a {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 8px 16px;
+    cursor: pointer;
+    text-align: center;
+    background-color: #008cba;
+    border-color: #007095;
+    color: white;
+    font-weight: lighter;
+    width: 20%;
+}
 
+#upload-area > input[type="file"] {
+    display: none;
+}
 
-input[type="text"] {
-    -webkit-appearance: none;
-    -webkit-border-radius: 0px;
-    background-color: white;
-    font-family: inherit;
+#upload-area > input[type="text"] {
+    position: absolute;
+    left: 0;
+    bottom: 0;
     border-style: solid;
     border-width: 1px;
-    border-color: #cccccc;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    color: rgba(0, 0, 0, 0.75);
-    display: block;
-    font-size: 0.77778rem;
-    margin: 0 0 0.88889rem 0;
-    padding: 0.44444rem;
-    height: 2.05556rem;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    transition: box-shadow 0.45s, border-color 0.45s ease-in-out;
-    border-image-source: initial;
-border-image-slice: initial;
-border-image-width: initial;
-border-image-outset: initial;
-border-image-repeat: initial;
--webkit-rtl-ordering: logical;
--webkit-user-select: text;
-cursor: auto;
+    border-color: #ccc;
+    height: 30px;
+    width: 80%;
 }
