unified GLOBAL.votes and GLOBAL.files. Public tunes folder for client playback. Fonts.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: Lato;
+    src: url(lato/Lato-Regular.ttf);
+}
+
+@font-face {
+    font-family: Lato;
+    font-weight: bold;
+    src: url(lato/Lato-Bold.ttf);
+}
+
 body {
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !important;
+    font-family: Lato, Helvetica, Arial, sans-serif !important;
 }
 
 #tunes-container {
