--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,20 +8,22 @@
     font-weight: bold;
     src: url(lato/Lato-Bold.ttf);
 }
-
 @font-face {
-    font-family: Aller;
-    src: url(Aller/Aller_Rg.ttf);
+    font-family: Lato;
+    src: url(lato/Lato-Light.ttf);
+    font-weight: thin;
 }
 
 @font-face {
-    font-family: Aller;
-    font-weight: bold;
-    src: url(Aller/Aller_Bd.ttf);
+    font-family: Lato;
+    font-weight: lighter;
+    src: url(lato/Lato-Thin.ttf);
 }
 
 body {
-    font-family: Aller, courier, Arial, sans-serif !important;
+    font-family: Lato, courier, Arial, sans-serif !important;
+    font-weight: thin;
+    font-size: 1em;
 }
 
 #tunes-container {
@@ -50,24 +52,34 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: no-wrap;
-}
-
-.tune-item * {
-    vertical-align: middle;
-    line-height: 30px;
+    align-items: center;
 }
 
 .tune-item .tune-score {
     order: 1;
-    flex-grow: 1;
-    flex-basis: 30px;
+
+    border: 1px solid #ccc;
+    text-align: center;
+    height: 50px;
+    width: 50px;
+    border-radius: 4px;
+    margin-right: 20px;
+    font-weight: normal;
+    font-size: 1.5em;
+}
+
+.tune-item .tune-score::after {
+    content: 'votes';
+    font-size: 0.7em;
+    display: block;
+    font-weight: lighter;
+    line-height: 0.8em;
 }
 
 .tune-item .tune-name {
     order: 2;
     flex-grow: 2;
     flex-basis: 100px;
-    font-weight: bold;
 }
 
 .tune-item .tune-audio {
@@ -81,17 +93,15 @@ body {
     flex-grow: 1;
 
     border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
-    border: 1px solid #007095;
+    padding: 6px 3px;
 }
 
 .tune-item > a::after {
-    content: 'vote';
+    content: 'Vote';
 }
 
 .tune-item > a:hover {
-    background-color: greenyellow;
+    background-color: #4390d4;
 }
 
 .tune-item > a:active {
@@ -110,13 +120,9 @@ body {
     position: absolute;
     right: 0;
     bottom: 0;
-    padding: 0 16px;
-    line-height: 35px;
-    cursor: pointer;
-    text-align: center;
-    border: 1px solid #007095;
+    padding: 6px 10px;
     /* minus padding left and right minus four 1px borders */
-    width: calc(20% - 32px - 4px);
+    width: calc(20% - 20px - 4px);
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -134,6 +140,18 @@ body {
     border-style: solid;
     border-width: 1px;
     border-color: #ccc;
-    height: 33px;
     width: 80%;
+    height: 26px;
+    padding-left: 10px;
+    font-family: arial, sans-serif;
+    font-size: 0.8em;
+}
+
+a {
+    font-size: 0.8em;
+    cursor: pointer;
+    text-align: center;
+    color: white;
+    background-color: #2370b4;
+    border: 1px solid #1f639f;
 }
