--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,7 +14,7 @@
 @font-face {
 
     font-family:        Lato;
-    font-weight:        thin;
+    font-weight:        light;
     src:                url(lato/Lato-Light.ttf);
 }
 
@@ -28,8 +28,11 @@
 body {
 
     font-family:        Lato, courier, Arial, sans-serif;
-    font-weight:        thin;
-    font-size:          1em;
+    font-weight:        light;
+}
+
+p {
+    font-weight:        none;
 }
 
 #tunes-container {
@@ -61,7 +64,7 @@ body {
     padding:            10px 15px;
     margin-bottom:      -1px;
     border:             1px solid #ddd;
-    
+
     background-color:   #fff;
 }
 
@@ -69,24 +72,24 @@ body {
 
     order:              1;
     border:             1px solid #ccc;
-    height:             50px;
-    width:              50px;
+    height:             40px;
+    width:              40px;
     border-radius:      4px;
     margin-right:       20px;
     box-shadow:         inset 0 0 2px 0 #ccc;
 
     text-align:         center;
     font-weight:        normal;
-    font-size:          1.5em;
+    font-size:          1.3rem;
 }
 
 .tune-item .tune-score::after {
-    
+
     display:            block;
-    
+
     font-weight:        lighter;
-    line-height:        0.8em;
-    font-size:          0.7em;
+    line-height:        0.8rem;
+    font-size:          0.7rem;
 
     content:            'votes';
 }
@@ -96,6 +99,9 @@ body {
     order:              2;
     flex-grow:          2;
     flex-basis:         100px;
+
+    font-size:          0.8rem;
+    line-height:        1rem;
 }
 
 .tune-item .tune-audio {
@@ -137,7 +143,7 @@ body {
     bottom:             0;
     padding:            6px 10px;
                         /* width - h paddings - h borders */
-    width:              calc(20% - 20px - 4px); 
+    width:              calc(20% - 20px - 4px);
     border-radius:      0 4px 4px 0;
 }
 
@@ -161,7 +167,7 @@ body {
     padding-left:       10px;
 
     font-family:        arial, sans-serif;
-    font-size:          0.8em;
+    font-size:          0.8rem;
 }
 
 
@@ -173,11 +179,11 @@ a {
     border-width:       1px;
 
     color:              white;
-    background-color:   rgba(35, 112, 180, 0.9);    
+    background-color:   rgba(35, 112, 180, 0.9);
     border-color:       rgba(35, 112, 180, 1);
 
     text-align:         center;
-    font-size:          0.8em;
+    font-size:          0.8rem;
 
     cursor:             pointer;
     transition:         background-color 0.3s ease;
@@ -189,11 +195,21 @@ a:hover {
 }
 
 a:active {
-    
+
     background-color:   rgba(15, 92, 160, 1);
 }
 
-.winner {
+.winner > .tune-name::after {
 
-    background-color: rgba(15, 92, 160, 0.1);
+    content: '♕ wins';
+
+    float: right;
+
+    padding-left: 10px;
+
+    color: orange;
+}
+
+.countdown {
+    transition:        display 0.3s ease;
 }
