--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -74,15 +74,20 @@ p {
     background-color:   #fff;
 }
 
+.tune-item > * {
+    margin: 0 5px 0 5px;
+}
+
 .tune-item .tune-score {
 
     order:              1;
     border:             1px solid #ccc;
     height:             40px;
-    width:              40px;
+    min-width:              40px;
     border-radius:      4px;
     margin-right:       20px;
     box-shadow:         inset 0 0 2px 0 #ccc;
+    padding:            ;
 
     text-align:         center;
     font-weight:        normal;
@@ -113,16 +118,14 @@ p {
 .tune-item .tune-audio {
 
     order:              3;
-    flex-grow:          3;
     text-align:         center;
 }
 
 .tune-item > a {
 
     order:              4;
-    flex-grow:          1;
     border-radius:      4px;
-    padding:            6px 3px;
+    padding:            6px 3%;
 }
 
 .tune-item > a::after {
