--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -63,9 +63,13 @@ p {
 
     position:           relative;
 
+    display:            -webkit-flex;
     display:            flex;
+    -webkit-flex-direction:row;
+    -webkit-flex-wrap:  nowrap;
     flex-direction:     row;
     flex-wrap:          nowrap;
+    -webkit-align-items:center;
     align-items:        center;
     padding:            10px 15px;
     margin-bottom:      -1px;
@@ -103,6 +107,10 @@ p {
 .tune-item .tune-name {
 
     order:              2;
+
+    -webkit-flex-grow:  2;
+    -webkit-flex-basis: 100px;
+
     flex-grow:          2;
     flex-basis:         100px;
 
@@ -110,16 +118,45 @@ p {
     line-height:        1rem;
 }
 
+.tune-item .play-button {
+    order:              3;
+
+    background-image: url('/images/play.png');
+
+    width: 32px;
+    height: 32px;
+    background-size: 32px;
+    margin-right: 15px;
+}
+
+
+.tune-item .pause-button {
+    order:              3;
+
+    background-image:   url('/images/pause.png');
+
+    width:              32px;
+    height:             32px;
+    background-size:    32px;
+    margin-right:       15px;
+
+    display:            none;
+}
+
 .tune-item .tune-audio {
 
     order:              3;
+
+    -webkit-flex-grow:  3;
     flex-grow:          3;
+
     text-align:         center;
 }
 
 .tune-item > a {
 
     order:              4;
+    -webkit-flex-grow:  1;
     flex-grow:          1;
     border-radius:      4px;
     padding:            6px 3px;
@@ -132,27 +169,6 @@ p {
 
 /* UPLOAD BOX */
 
-#upload-area {
-
-    position:           relative;
-
-    width:              100%;
-    height:             40px;
-    display:            inline-block;
-    padding:            0;
-}
-
-#upload-area > a {
-
-    position:           absolute;
-    right:              0;
-    bottom:             0;
-    padding:            6px 10px;
-                        /* width - h paddings - h borders */
-    width:              calc(20% - 20px - 4px);
-    border-radius:      0 4px 4px 0;
-}
-
 #upload-area > input[type="file"] {
 
     display: none;
@@ -160,15 +176,11 @@ p {
 
 #upload-area > input[type="text"] {
 
-    position:           absolute;
-    left:               0;
-    bottom:             0;
-
-    border-radius:      4px 0 0 4px;
+    border-radius:      4px;
     border-style:       solid;
     border-width:       1px;
     border-color:       #ccc;
-    width:              80%;
+    width:              calc(100% - 16px);
     height:             26px;
     padding-left:       10px;
 
@@ -176,6 +188,26 @@ p {
     font-size:          0.8rem;
 }
 
+#upload-area > #upload-button {
+
+    border-style:       solid;
+    border-width:       1px;
+
+    color:              white;
+    background-color:   rgba(35, 112, 180, 0.9);
+    border-color:       rgba(35, 112, 180, 1);
+
+    text-align:         center;
+    font-size:          0.8rem;
+
+    cursor:             pointer;
+    transition:         background-color 0.3s ease;
+
+    border-radius:      4px;
+    padding:            6px 3px;
+
+    margin-top:         10px;
+}
 
 /* BUTTONS */
 
@@ -209,11 +241,11 @@ a:active {
 
 .winner > .tune-name::after {
 
-    content:        '♕ wins';
+    padding-right:   5px;
 
-    float:          right;
+    content:        '♕';
 
-    padding-left:   10px;
+    float:          left;
 
     color:          orange;
 }
