--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -61,21 +61,21 @@ p {
 
 .tune-item {
 
-    position:           relative;
+    position:               relative;
 
-    display:            -webkit-flex;
-    display:            flex;
-    -webkit-flex-direction:row;
-    -webkit-flex-wrap:  nowrap;
-    flex-direction:     row;
-    flex-wrap:          nowrap;
-    -webkit-align-items:center;
-    align-items:        center;
-    padding:            10px 15px;
-    margin-bottom:      -1px;
-    border:             1px solid #ddd;
+    display:                -webkit-flex;
+    display:                flex;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap:      nowrap;
+    flex-direction:         row;
+    flex-wrap:              nowrap;
+    -webkit-align-items:    center;
+    align-items:            center;
+    padding:                10px 15px;
+    margin-bottom:          -1px;
+    border:                 1px solid #ddd;
 
-    background-color:   #fff;
+    background-color:       #fff;
 }
 
 .tune-item .tune-score {
@@ -83,11 +83,10 @@ p {
     order:              1;
     border:             1px solid #ccc;
     height:             40px;
-    min-width:              40px;
+    min-width:          40px;
     border-radius:      4px;
     margin-right:       20px;
     box-shadow:         inset 0 0 2px 0 #ccc;
-    padding:            ;
 
     text-align:         center;
     font-weight:        normal;
@@ -155,32 +154,33 @@ p {
 }
 
 .tune-item > a::after {
-
     content:            'Vote';
 }
 
 /* UPLOAD BOX */
 
-#upload-area > input[type="file"] {
+#upload-box {
 
-    display: none;
+    display:                -webkit-flex;
+    display:                flex;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap:      nowrap;
+    flex-direction:         row;
+    flex-wrap:              nowrap;
+
 }
 
-#upload-area > input[type="text"] {
-
-    border-radius:      4px;
-    border-style:       solid;
-    border-width:       1px;
-    border-color:       #ccc;
-    width:              calc(100% - 16px);
+#upload-box #upload-area {
     height:             26px;
-    padding-left:       10px;
-
-    font-family:        arial, sans-serif;
-    font-size:          0.8rem;
+    -webkit-flex-grow:  2;
+    flex-grow:          2;
 }
 
-#upload-area > #upload-button {
+#upload-box #upload-button {
+    height:              26px;
+    line-height:        26px;
+    -webkit-flex-grow:  1;
+    flex-grow:          1;
 
     border-style:       solid;
     border-width:       1px;
@@ -194,11 +194,38 @@ p {
 
     cursor:             pointer;
     transition:         background-color 0.3s ease;
-
     border-radius:      4px;
-    padding:            6px 3px;
+}
 
-    margin-top:         10px;
+#upload-area > input[type="text"] {
+
+    border-radius:      4px 0px 0px 4px;
+    border-style:       solid;
+    border-width:       1px;
+    border-color:       #ccc;
+    width:              100%;
+    height:             26px;
+    padding:            0px;
+    font-family:        arial, sans-serif;
+    font-size:          0.8rem;
+}
+
+@media only screen and (max-width: 500px) {
+
+    /* Let's render the button on the next line with full width on smaller devices */
+    #upload-area > input[type="text"] {
+        border-radius:          4px;
+    }
+
+    #upload-box {
+        -webkit-flex-direction: column;
+        flex-direction:         column;
+    }
+
+    #upload-box #upload-button {
+        margin-top:             10px;
+    }
+
 }
 
 /* BUTTONS */
@@ -232,13 +259,9 @@ a:active {
 /* MISC */
 
 .winner > .tune-name::after {
-
-    padding-right:   5px;
-
+    padding-right:  5px;
     content:        '♕';
-
     float:          left;
-
     color:          orange;
 }
 
