--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,25 +1,21 @@
 @font-face {
-
     font-family:        Lato;
     src:                url(lato/Lato-Regular.ttf);
 }
 
 @font-face {
-
     font-family:        Lato;
     font-weight:        bold;
     src:                url(lato/Lato-Bold.ttf);
 }
 
 @font-face {
-
     font-family:        Lato;
     font-weight:        light;
     src:                url(lato/Lato-Light.ttf);
 }
 
 @font-face {
-
     font-family:        Lato;
     font-weight:        lighter;
     src:                url(lato/Lato-Thin.ttf);
@@ -31,7 +27,6 @@ h3 {
 }
 
 body {
-
     font-family:        Lato, courier, Arial, sans-serif;
     font-weight:        light;
 }
@@ -59,91 +54,28 @@ p {
     color:              orange;
 }
 
-ul.rules {
-    list-style-type:    binary;
-    margin:             5px 0;
-}
-
 /* TABLE */
 
 #tunes-container {
-
-    padding:            0;
-}
-
-.tune-item:first-child {
-
-    border-radius:      4px 4px 0 0;
-}
-
-.tune-item:last-child {
-
-    border-radius:      0 0 4px 4px;
-}
-
-
-/* ROWS */
-
-.tune-item {
-
-    position:               relative;
-
+    padding: 0;
     display:                -webkit-flex;
     display:                flex;
     -webkit-flex-direction: row;
-    -webkit-flex-wrap:      nowrap;
     flex-direction:         row;
-    flex-wrap:              nowrap;
-    -webkit-align-items:    center;
-    align-items:            center;
-    padding:                10px 15px;
-    margin-bottom:          -1px;
-    border:                 1px solid #ddd;
-
-    background-color:       #fff;
+    flex-wrap:              wrap;
+    -webkit-flex-wrap:      wrap;
+}
+/*
+.tune-item:first-child {
+    border-radius: 4px 4px 0 0;
 }
 
-.tune-item .tune-score {
-
-    order:              1;
-    border:             1px solid #ccc;
-    height:             40px;
-    min-width:          40px;
-    border-radius:      4px;
-    margin-right:       20px;
-    box-shadow:         inset 0 0 2px 0 #ccc;
-
-    text-align:         center;
-    font-weight:        normal;
-    font-size:          1.3rem;
+.tune-item:last-child {
+    border-radius: 0 0 4px 4px;
 }
+*/
 
-.tune-item .tune-score::after {
-
-    display:            block;
-
-    font-weight:        lighter;
-    line-height:        0.8rem;
-    font-size:          0.7rem;
-
-    content:            'votes';
-}
-
-.tune-item .tune-name {
-
-    order:              2;
-
-    -webkit-flex-grow:  2;
-    -webkit-flex-basis: 100px;
-
-    flex-grow:          2;
-    flex-basis:         100px;
-
-    font-size:          0.8rem;
-    line-height:        1rem;
-}
-
-.tune-item .play-button {
+/*.tune-item .play-button {
     order:              3;
 
     background-image: url('/images/play.png');
@@ -153,8 +85,8 @@ ul.rules {
     background-size: 32px;
     margin-right: 15px;
 }
-
-
+*/
+/*
 .tune-item .pause-button {
     order:              3;
 
@@ -177,10 +109,10 @@ ul.rules {
     border-radius:      4px;
     padding:            6px 3%;
 }
-
 .tune-item > .button::after {
     content:            'Vote';
 }
+*/
 
 /* UPLOAD BOX */
 
